# esp32-release-strip-bug

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
