[package]
name = "bla"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-idf-sys = { version = "0.31", features = ["binstart", "native"] }
esp-idf-svc = "0.42"
cobs = { version = "=0.2.3", default-features = false }

[build-dependencies]
embuild = { version = "0.30", features = ["elf"] }
anyhow = "1"

[profile.release]
strip = true # this is the problem!

[profile.dev]
debug = true
opt-level = "z"
